--- a/templates/structure/map.html.twig
+++ b/templates/structure/map.html.twig
@@ -11,7 +11,10 @@
 {% block action %}
     {% if not is_granted('IS_AUTHENTICATED_REMEMBERED') %}
         <div class="card">
-            <div class="card-header bg-primary text-white">Pour adhérer, veuillez cliquer sur la structure de votre région, et vous enregistrer en 3 étapes : validation du formulaire, confirmation de l'adresse e-mail et paiement de la cotisation.</div>
+            <div class="card-header bg-primary text-white">
+                Pour accéder aux coordonnées des structures et aux différents services proposés, veuillez d'abord cliquer sur la structure de votre région sur la carte ci-contre.
+                Si vous disposez déjà d'un compte, veuillez vous identifier (en haut) pour accéder à votre tableau de bord récapitulatif.
+            </div>
         </div>
     {% elseif is_granted('ROLE_ADMIN') %}
             <a class="btn btn-primary" href="{{ path('core_structure_new') }}" title="Ajouter une nouvelle structure">
