Ajout des droits d'accès pour les administrateurs

--- a/templates/dashboard/user.html.twig
+++ b/templates/dashboard/user.html.twig
@@ -214,4 +214,19 @@
         </ul>
     </div>
     {% endif %}
+
+    {% if is_granted('ROLE_ADMIN') %}
+    <div class="card mt-3">
+        <div class="card-header bg-primary text-white text-center">Droits d'accès</div>
+        <div class="card-body">
+            {% for role in person.user.roles %}
+            <a class="btn btn-sm btn-primary" href="" title="">
+                {{ role }}
+            </a>
+            {% else %}
+            Aucun rôle enregistré.
+            {% endfor %}
+        </div>
+    </div>
+    {% endif %}
 {% endblock %}
