--- a/templates/dashboard/user.html.twig
+++ b/templates/dashboard/user.html.twig
@@ -67,7 +67,12 @@
 
 {% block content %}
     <div class="card">
-        <div class="card-header bg-primary text-white text-center">Informations personnelles</div>
+        <div class="card-header bg-primary text-white text-center">
+            Informations personnelles
+            {% if (is_granted("ROLE_STRUCTURE") or is_granted("ROLE_ADMIN")) and person.user.enabled == 0 %}
+            <span class="float-right badge badge-warning badge-sm">inactif</span>
+            {% endif %}
+        </div>
         <div class="card-body">
             <p class="card-text p-0 m-0"><i class="fas fa-user"></i> {{ person.title }} {{ person.surname }} {{ person.name }}</p>
             {% if person.birthday %}{% set age = date().diff(person.birthday) %}{% else %}{% set age = date().diff(date()) %}{% endif %}
